<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">

	<include
		layout="@layout/toolbar_common"/>

	<ScrollView
		android:layout_height="match_parent"
		android:layout_width="match_parent"
		android:fillViewport="true">

		<RelativeLayout
			android:layout_height="match_parent"
			android:layout_width="match_parent">

			<LinearLayout
				android:layout_height="match_parent"
				android:layout_width="match_parent"
				android:orientation="vertical"
				android:padding="10dp"
				android:gravity="top|left">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/settings_normal"
					android:layout_margin="10dp"
					android:textColor="?attr/colorAccent"/>

				<LinearLayout
					android:layout_height="wrap_content"
					android:layout_width="match_parent"
					android:orientation="vertical"
					android:layout_margin="10dp">

					<TextView
						android:layout_height="wrap_content"
						android:layout_width="wrap_content"
						android:text="@string/settings_output_dir"/>

					<EditText
						android:layout_height="wrap_content"
						android:layout_width="match_parent"
						android:ems="10"
						android:hint="@string/settings_output_dir"
						android:id="@+id/appsettingsEditText1"/>

				</LinearLayout>

				<LinearLayout
					android:layout_height="wrap_content"
					android:layout_width="match_parent"
					android:orientation="horizontal"
					android:layout_margin="10dp"
					android:gravity="left|center_horizontal">

					<TextView
						android:layout_height="match_parent"
						android:layout_width="wrap_content"
						android:text="@string/settings_promot_on_mobile_data"
						android:gravity="center"/>

					<RelativeLayout
						android:layout_height="wrap_content"
						android:layout_width="match_parent"
						android:gravity="right|center_horizontal">

						<CheckBox
							android:layout_height="wrap_content"
							android:layout_width="wrap_content"
							android:id="@+id/appsettingsCheckBox1"/>

					</RelativeLayout>

				</LinearLayout>

				<LinearLayout
					android:layout_height="wrap_content"
					android:layout_width="match_parent"
					android:orientation="horizontal"
					android:layout_margin="10dp"
					android:gravity="left|center_horizontal">

					<TextView
						android:layout_height="match_parent"
						android:layout_width="wrap_content"
						android:text="@string/settings_show_stats"
						android:gravity="center"/>

					<RelativeLayout
						android:layout_height="wrap_content"
						android:layout_width="match_parent"
						android:gravity="right|center_horizontal">

						<CheckBox
							android:layout_height="wrap_content"
							android:layout_width="wrap_content"
							android:id="@+id/appsettingsCheckBox2"/>

					</RelativeLayout>

				</LinearLayout>

				<TextView
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					android:text="@string/settings_advanced"
					android:textColor="?attr/colorAccent"
					android:layout_margin="10dp"/>

				<LinearLayout
					android:layout_height="wrap_content"
					android:layout_width="match_parent"
					android:orientation="horizontal"
					android:layout_margin="10dp"
					android:weightSum="1.0"
					android:gravity="center">

					<TextView
						android:layout_height="wrap_content"
						android:layout_width="0dp"
						android:text="@string/settings_advanced_description"
						android:layout_weight="0.9"/>

					<Button
						android:layout_height="wrap_content"
						android:layout_width="wrap_content"
						android:text="@string/settings_advanced_recover"
						android:layout_weight="0.1"
						android:id="@+id/appsettingsButton1"
						android:onClick="onRecoverAdvancedSettingsButtonClicked"/>

				</LinearLayout>

				<LinearLayout
					android:layout_height="wrap_content"
					android:layout_width="match_parent"
					android:orientation="vertical"
					android:layout_margin="10dp">

					<TextView
						android:layout_height="wrap_content"
						android:layout_width="wrap_content"
						android:text="@string/settings_typetag"/>

					<EditText
						android:layout_height="wrap_content"
						android:layout_width="match_parent"
						android:ems="10"
						android:hint="@string/settings_typetag"
						android:id="@+id/appsettingsEditText2"/>

				</LinearLayout>

				<LinearLayout
					android:layout_height="wrap_content"
					android:layout_width="match_parent"
					android:orientation="vertical"
					android:layout_margin="10dp">

					<TextView
						android:layout_height="wrap_content"
						android:layout_width="wrap_content"
						android:text="@string/settings_preferedquality"/>

					<EditText
						android:layout_height="wrap_content"
						android:layout_width="match_parent"
						android:ems="10"
						android:hint="@string/settings_preferedquality"
						android:inputType="number"
						android:id="@+id/appsettingsEditText3"/>

				</LinearLayout>

			</LinearLayout>

		</RelativeLayout>

	</ScrollView>

</LinearLayout>

